--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
-before_install:
-  - sudo apt-get -qq update
-  - sudo apt-cache search clang-format
-  - sudo apt-get install -y clang-format-3.6
+addons:
+  apt:
+    packages:
+      - clang-format-3.6
 
 script: clang-format -i ./src/*.c && git diff-files --quiet
